--- a/edgeproxy/static/index.html
+++ b/edgeproxy/static/index.html
@@ -9,16 +9,10 @@
         // var edgeql_data = function(url, params, response){return response.data;}
         htmx.defineExtension('tabulator-output-artists', {
             transformResponse : function(text, xhr, elt) {
-                var data = JSON.parse(text).data;
-                // var data = JSON.parse(text);
+                var data = JSON.parse(text);
                 var tabulator_output_name = htmx.closest(elt, "[tabulator-output]");
                 var table = new Tabulator(tabulator_output_name, {
                     layout: "fitDataStretch",
-                    // ajaxURL: "/artists",
-                    // ajaxConfig: "GET",
-                    // ajaxContentType: "json",
-                    // ajaxParams: {"query": "select artists {*}"},
-                    // ajaxResponse: edgeql_data,
                     pagination: true,
                     paginationSize: 50,
                     columns:[
